--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,11 +71,11 @@ body {
 }
 
 #answer-box {
-    border: none;
+    border: 1px solid #445361;
     color: #445361;
     display: inline-block;
     height: 40px;
-    width: 80px;
+    width: 100px;
     font-size: 1.2rem;
 }
 
@@ -109,6 +109,14 @@ body {
     font-size: 3.2rem;
     margin: 0 30px;
     transition: all 0.5s;
+}
+
+.btn--big::after{
+    content: attr(data-type);
+    font-size: 1rem;
+    color: #445361;
+    position: relative;
+    left: -0.5em;
 }
 
 .btn--blue {
@@ -183,13 +191,6 @@ body {
         font-size: 1.5rem;
     }
 
-    .btn--btn::after {
-        content:attr(data-type);
-        font-size: 1rem;
-        color: #445361;
-        position:relative;
-        left: -0.5rem;
-    }
     .btn--big::after {
         font-size: 0.6rem;
         left: -0.7rem;
